# Debat-Bot-using-LLM

./: README.md  crew.py  main.py  pyproject.toml  requirnment.txt
debat/config/: agents.yaml
