[project]
name = "debate"
version = "0.1.0"
description = "debate using crewAI"
authors = [{ name = "Henry", email = "joshuamarionh0203@gmail.com" }]
requires-python = ">=3.10,<=3.13.1"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
debate = "main:run"
run_crew = "main:run"
train = "main:train"
replay = "main:replay"
test = "main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["."]
